<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingBottom="6dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/calculate_dialog_title"
    />
    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_weight"
        android:inputType="numberDecimal"
        />
    <EditText
        android:id="@+id/sugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_sugar_per_weight"
        android:inputType="numberDecimal"
        />
    <EditText
        android:id="@+id/portion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_portion_weight"
        android:inputType="numberDecimal"
        />
    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:text="0g"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"/>
        <Button
            android:id="@+id/button_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_insert"/>
    </LinearLayout>

</LinearLayout>