<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingBottom="6dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/add_dialog_title"
        />
    <AutoCompleteTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:inputType="textCapSentences"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sugar"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            />
        <ImageButton
            android:id="@+id/button_calculate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="6dp"
            android:src="@drawable/calculator_icon"
            android:scaleType="centerInside"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"/>
        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save"/>
    </LinearLayout>

</LinearLayout>